feat: refactored entities
